@@ -1,5 +1,8 @@
 2004-10-06  Marcus Brinkmann  <marcus@gnu.org>
 
+	* l4/compat/space.h (L4_FlushFpage) [!__cplusplus]: Rename to ...
+	(L4_FlushFpages) [!__cplusplus]: ... this.
+
 	* l4/gnu/space.h (L4_FPAGE_READ_WRITE_ONLY): Define macro.
 	* l4/space.h (_L4_read_write_only): Define macro.
 	* l4/compat/space.h (L4_ReadWriteOnly): Define macro.
